<resources>
    <string name="app_name">Timer</string>
    <string name="home_page">Home page</string>
    <string name="timer_page">Timer page</string>
    <string name="edit_page">Edit page</string>
    <string name="settings_page">Settings page</string>
    <string name="preparation">Preparation</string>
    <string name="warm_up">Warm-up</string>
    <string name="work">Work</string>
    <string name="relaxation">Relaxation</string>
    <string name="cycle">Cycle</string>
    <string name="set">Set</string>
    <string name="pause">Pause</string>
    <string name="name">Name : </string>
    <string name="preparationT">Preparation : </string>
    <string name="warm_upT">Warm-up : </string>
    <string name="workT">Work : </string>
    <string name="relaxationT">Relaxation : </string>
    <string name="cycleT">Cycle : </string>
    <string name="setT">Set : </string>
    <string name="pauseT">Pause : </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="button_clear">Clear</string>
    <string name="button_add">Add</string>
    <string name="settings">Settings</string>
    <string name="textview_lg">Change of language</string>
    <string name="textview_cl">Delete timers</string>
    <string name="select">Select The Action</string>
    <string name="view_timer">View Timer</string>
    <string name="edit_timer">Edit Timer</string>
    <string name="delete_timer">Delete timers</string>
    <string name="delete_ok">. Are you sure you want to delete?</string>
    <string name="language_selection">Language selection</string>
    <string name="font_settings">Font settings</string>
    <string name="change_theme">Change theme</string>
    <string name="delete_timers">Delete timers</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_value">Select the desired value</string>
    <string name="tittle">VIEW TIMERS</string>
</resources>